--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
     <script>
         async function getHelloMessage() {
             try {
-                const response = await fetch(`http://
-localhost:3000/hello/everyone`, {
+                const message = document.getElementById('message').value;
+
+                const response = await fetch(`http://localhost:3000/hello/`+ message, {
                     headers: {
                         'Content-Type': 'application/json',
                     },
@@ -16,6 +17,8 @@ localhost:3000/hello/everyone`, {
             }
         }
     </script>
+   
+   <input type="text" id="message"/>  
 </header>
 <button onclick="getHelloMessage()">Cliquez ici</button>
 </body>
